# Basic_Machine_Learning

./: .gitignore  CMakeLists.txt  README.md
datasets/: README.txt  README1.txt  README2.txt
include/ml/: csv.h  linreg.h  matrix.h  plot.h  poly.h  stats.h
results/: column_summary.csv  gd_loss.csv  gd_loss.gp  linear_comparison.csv  linear_time.gp  linear_train_mse.gp  linear_val_mse.gp  mse_vs_degree.csv  mse_vs_degree.gp  mse_vs_lambda.csv  mse_vs_lambda.gp  weights_absdiff.csv  weights_absdiff.gp  weights_ne_vs_gd.csv  weights_ne_vs_gd.gp  wnorm_vs_lambda.csv  wnorm_vs_lambda.gp
src/: csv.cpp  linreg.cpp  main.cpp  main.cpp.txt  matrix.cpp  plot.cpp  poly.cpp  stats.cpp
